--- a/bond.html
+++ b/bond.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="bond.css">
+    <link rel="stylesheet" href="assets/css/bond.css">
 </head>
 <body>
 
@@ -69,7 +69,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.js"></script>
 
     <!-- Custom JS -->
-    <script src="bond.js"></script>
+    <script src="assets/js/bond.js"></script>
 
 </body>
 </html>
