--- a/bond.html
+++ b/bond.html
@@ -138,6 +138,7 @@
 
     <!-- Custom JS -->
     <script src="assets/js/bond.js"></script>
+    <script src="assets/js/calculator.js"></script>
 
 </body>
 </html>
