--- a/bond.html
+++ b/bond.html
@@ -14,24 +14,20 @@
 
     <!-- Top Navbar -->
 <nav class="navbar navbar-expand-lg navbar-light border-bottom">
-    <div class="container-fluid">
-        <!-- Left: Logo -->
-        <a class="navbar-brand" href="#">
+    <div class="container-fluid d-flex align-items-center">
+        <a class="navbar-brand me-auto" href="#">
             <img src="img/logo.png" alt="Logo"> <!-- Add your logo URL -->
         </a>
-
-        <!-- Center: Bank Name -->
-        <h1 class="mx-auto d-none d-lg-block">Safe Bank Plc</h1>
-
-        <!-- Right: Toggle Button -->
+        <h1 class="mx-auto">Safe Bank Plc</h1>
         <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+            <span></span>
+            <span></span>
+            <span></span>
         </button>
     </div>
 
-    <!-- Navbar Links -->
+    <!-- Centered Navbar Links -->
     <div class="collapse navbar-collapse" id="navbarContent">
-        <h1 class="mx-auto d-lg-none text-center">Safe Bank Plc</h1> <!-- Shown only on mobile -->
         <ul class="navbar-nav mx-auto text-center">
             <li class="nav-item">
                 <a class="nav-link" href="#">Home</a>
