--- a/bond.html
+++ b/bond.html
@@ -13,7 +13,7 @@
 <body>
 
     <!-- Top Navbar -->
-<nav class="navbar navbar-expand-lg navbar-light border-bottom">
+<nav class="navbar navbar-expand-lg navbar-light sticky-bottom border-bottom">
     <div class="container-fluid d-flex align-items-center">
         <a class="navbar-brand me-auto" href="#">
             <img src="img/logo.png" alt="Logo"> <!-- Add your logo URL -->
