--- a/bond.html
+++ b/bond.html
@@ -58,41 +58,47 @@
             </div>
             
             <!-- Bond Calculator Fields -->
-            <div id="bondCalculatorFields">
-                <h4 class="mt-4">Bond Calculator</h4>
-                <div class="form-group mb-3">
-                    <input type="tel" class="form-control" id="bondAmount" placeholder="Amount (TZS)">
-                </div>
-                <div class="form-group mb-3">
-                    <input type="tel" class="form-control" id="bondInterestRate" placeholder="Interest Rate (%)">
-                </div>
-                <div class="form-group mb-3">
-                    <input type="tel" class="form-control" id="bondYears" placeholder="Duration (Years)">
-                </div>
-                <div class="form-group mb-3">
-                    <label for="bondFrequency">Interest Paid</label>
-                    <select class="form-control" id="bondFrequency">
-                        <option value="monthly">Monthly</option>
-                        <option value="quarterly">Quarterly</option>
-                        <option value="semi-annually">Semi-annually</option>
-                        <option value="yearly">Yearly</option>
-                    </select>
-                </div>
-            </div>
+<div id="bondCalculatorFields">
+    <h4 class="mt-4">Bond Calculator</h4>
+    <div class="form-group mb-3 floating-label-group">
+        <input type="tel" class="form-control" id="bondAmount" placeholder=" " required>
+        <label for="bondAmount">Amount (TZS)</label>
+    </div>
+    <div class="form-group mb-3 floating-label-group">
+        <input type="tel" class="form-control" id="bondInterestRate" placeholder=" " required>
+        <label for="bondInterestRate">Interest Rate (%)</label>
+    </div>
+    <div class="form-group mb-3 floating-label-group">
+        <input type="tel" class="form-control" id="bondYears" placeholder=" " required>
+        <label for="bondYears">Duration (Years)</label>
+    </div>
+    <div class="form-group mb-3">
+        <label for="bondFrequency">Interest Paid</label>
+        <select class="form-control" id="bondFrequency">
+            <option value="monthly">Monthly</option>
+            <option value="quarterly">Quarterly</option>
+            <option value="semi-annually">Semi-annually</option>
+            <option value="yearly">Yearly</option>
+        </select>
+    </div>
+</div>
 
-            <!-- Loan Calculator Fields (hidden by default) -->
-            <div id="loanCalculatorFields" style="display: none;">
-                <h4 class="mt-4">Loan Calculator</h4>
-                <div class="form-group mb-3">
-                    <input type="text" class="form-control" id="loanAmount" placeholder="Amount (TZS)">
-                </div>
-                <div class="form-group mb-3">
-                    <input type="text" class="form-control" id="loanInterestRate" placeholder="Interest Rate (%)">
-                </div>
-                <div class="form-group mb-3">
-                    <input type="text" class="form-control" id="loanYears" placeholder="Duration (Years)">
-                </div>
-            </div>
+<!-- Loan Calculator Fields -->
+<div id="loanCalculatorFields" style="display: none;">
+    <h4 class="mt-4">Loan Calculator</h4>
+    <div class="form-group mb-3 floating-label-group">
+        <input type="tel" class="form-control" id="loanAmount" placeholder=" " required>
+        <label for="loanAmount">Amount (TZS)</label>
+    </div>
+    <div class="form-group mb-3 floating-label-group">
+        <input type="tel" class="form-control" id="loanInterestRate" placeholder=" " required>
+        <label for="loanInterestRate">Interest Rate (%)</label>
+    </div>
+    <div class="form-group mb-3 floating-label-group">
+        <input type="tel" class="form-control" id="loanYears" placeholder=" " required>
+        <label for="loanYears">Duration (Years)</label>
+    </div>
+</div>
 
             <!-- Buttons -->
             <div class="button-group mt-4">
