--- a/bond.html
+++ b/bond.html
@@ -3,108 +3,89 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bond Calculator</title>
+    <title>Bond & Loan Calculator</title>
     
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="assets/css/bond.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
 
     <!-- Top Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light sticky-top border-bottom">
-        <div class="container-fluid d-flex align-items-center">
-            <a class="navbar-brand me-auto" href="#">
-                <img src="img/logo.png" alt="Logo"> <!-- Add your logo URL -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom sticky-top">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+                <img src="assets/img/logo.png" alt="Safe Bank Logo" width="30">
             </a>
-            <h1 class="mx-auto">Safe Bank Plc</h1>
-            <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span></span>
-                <span></span>
-                <span></span>
-            </button>
-        </div>
-
-        <!-- Centered Navbar Links -->
-        <div class="collapse navbar-collapse" id="navbarContent">
-            <ul class="navbar-nav mx-auto text-center">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Services</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Loans</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
-                </li>
-            </ul>
+            <h1 class="navbar-text mx-auto">Safe Bank Plc</h1>
         </div>
     </nav>
 
     <!-- Calculator Form -->
-    <div class="container calculator-container mt-5 mb-5">
-        <!-- Form for selecting between calculators -->
-        <form id="calculatorForm" class="calculator-form">
-            <div class="form-group mb-4">
-                <label for="calculatorType">Select Calculator</label>
-                <select class="form-control" id="calculatorType">
-                    <option value="bond">Bond</option>
-                    <option value="loan">Loan</option>
-                </select>
-            </div>
-            
-            <!-- Bond Calculator Fields -->
-            <div id="bondCalculatorFields">
-                <h4 class="mt-4">Bond Calculator</h4>
-                <div class="form-group mb-3">
-                    <input type="tel" class="form-control" id="bondAmount" placeholder="Amount (TZS)">
-                </div>
-                <div class="form-group mb-3">
-                    <input type="tel" class="form-control" id="bondInterestRate" placeholder="Interest Rate (%)">
-                </div>
-                <div class="form-group mb-3">
-                    <input type="tel" class="form-control" id="bondYears" placeholder="Duration (Years)">
-                </div>
-                <div class="form-group mb-3">
-                    <label for="bondFrequency">Interest Paid</label>
-                    <select class="form-control" id="bondFrequency">
-                        <option value="monthly">Monthly</option>
-                        <option value="quarterly">Quarterly</option>
-                        <option value="semi-annually">Semi-annually</option>
-                        <option value="yearly">Yearly</option>
-                    </select>
-                </div>
-            </div>
+    <div class="container calculator-container my-5">
+        <div class="row justify-content-center">
+            <div class="col-md-8">
+                <form id="calculatorForm" class="calculator-form p-4 border rounded bg-light">
+                    <div class="form-group mb-4">
+                        <label for="calculatorType">Select Calculator</label>
+                        <select class="form-control" id="calculatorType">
+                            <option value="bond">Bond</option>
+                            <option value="loan">Loan</option>
+                        </select>
+                    </div>
 
-            <!-- Loan Calculator Fields (hidden by default) -->
-            <div id="loanCalculatorFields" style="display: none;">
-                <h4 class="mt-4">Loan Calculator</h4>
-                <div class="form-group mb-3">
-                    <input type="text" class="form-control" id="loanAmount" placeholder="Amount (TZS)">
-                </div>
-                <div class="form-group mb-3">
-                    <input type="text" class="form-control" id="loanInterestRate" placeholder="Interest Rate (%)">
-                </div>
-                <div class="form-group mb-3">
-                    <input type="text" class="form-control" id="loanYears" placeholder="Duration (Years)">
-                </div>
-            </div>
+                    <!-- Bond Calculator Fields -->
+                    <div id="bondCalculatorFields">
+                        <h4>Bond Calculator</h4>
+                        <div class="form-group mb-3">
+                            <input type="number" class="form-control" id="bondAmount" placeholder="Amount (TZS)" min="0">
+                        </div>
+                        <div class="form-group mb-3">
+                            <input type="number" class="form-control" id="bondInterestRate" placeholder="Interest Rate (%)" min="0">
+                        </div>
+                        <div class="form-group mb-3">
+                            <input type="number" class="form-control" id="bondYears" placeholder="Duration (Years)" min="0">
+                        </div>
+                        <div class="form-group mb-3">
+                            <label for="bondFrequency">Interest Paid</label>
+                            <select class="form-control" id="bondFrequency">
+                                <option value="monthly">Monthly</option>
+                                <option value="quarterly">Quarterly</option>
+                                <option value="semi-annually">Semi-annually</option>
+                                <option value="yearly">Yearly</option>
+                            </select>
+                        </div>
+                    </div>
 
-            <!-- Buttons -->
-            <div class="button-group mt-4">
-                <button type="submit" class="btn btn-dark w-100">Calculate</button>
-                <button type="button" class="btn btn-light w-100 mt-3" id="clearFormBtn">Clear</button>
+                    <!-- Loan Calculator Fields -->
+                    <div id="loanCalculatorFields" style="display: none;">
+                        <h4>Loan Calculator</h4>
+                        <div class="form-group mb-3">
+                            <input type="number" class="form-control" id="loanAmount" placeholder="Amount (TZS)" min="0">
+                        </div>
+                        <div class="form-group mb-3">
+                            <input type="number" class="form-control" id="loanInterestRate" placeholder="Interest Rate (%)" min="0">
+                        </div>
+                        <div class="form-group mb-3">
+                            <input type="number" class="form-control" id="loanYears" placeholder="Duration (Years)" min="0">
+                        </div>
+                    </div>
+
+                    <!-- Buttons -->
+                    <div class="button-group mt-4">
+                        <button type="submit" class="btn btn-primary w-100">Calculate</button>
+                        <button type="button" class="btn btn-secondary w-100 mt-3" id="clearFormBtn">Clear</button>
+                    </div>
+                </form>
             </div>
-        </form>
+        </div>
     </div>
 
-    <!-- Footer -->
-    <footer class="text-center mt-5">
-        <p>Bond Calculator &copy; 2024 Safe Bank Plc. All rights reserved.</p>
+    <!-- Footer with Dark/Light Mode Switch -->
+    <footer class="text-center py-3 bg-light border-top">
+        <button class="btn btn-dark" id="toggleThemeBtn">Toggle Dark Mode</button>
+        <p>Bond & Loan Calculator &copy; 2024 Safe Bank Plc. All rights reserved.</p>
     </footer>
 
     <!-- Modal for displaying results -->
@@ -125,14 +106,9 @@
         </div>
     </div>
 
-    <!-- Bootstrap 5 JS and dependencies -->
+    <!-- Bootstrap 5 JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Bootstrap Icons CDN -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.js"></script>
-
     <!-- Custom JS -->
-    <script src="assets/js/bond.js"></script>
     <script src="assets/js/calculator.js"></script>
-
 </body>
 </html>
