--- a/bond.html
+++ b/bond.html
@@ -4,91 +4,78 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bond & Loan Calculator</title>
-    
-    <!-- Bootstrap 5 CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Custom CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-
-    <!-- Top Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom sticky-top">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-                <img src="assets/img/logo.png" alt="Safe Bank Logo" width="30">
-            </a>
-            <h1 class="navbar-text mx-auto">Safe Bank Plc</h1>
+            <a class="navbar-brand" href="#">Bond & Loan Calculator</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
         </div>
     </nav>
 
-    <!-- Calculator Form -->
-    <div class="container calculator-container my-5">
-        <div class="row justify-content-center">
-            <div class="col-md-8">
-                <form id="calculatorForm" class="calculator-form p-4 border rounded bg-light">
-                    <div class="form-group mb-4">
-                        <label for="calculatorType">Select Calculator</label>
-                        <select class="form-control" id="calculatorType">
-                            <option value="bond">Bond</option>
-                            <option value="loan">Loan</option>
-                        </select>
-                    </div>
-
-                    <!-- Bond Calculator Fields -->
-                    <div id="bondCalculatorFields">
-                        <h4>Bond Calculator</h4>
-                        <div class="form-group mb-3">
-                            <input type="number" class="form-control" id="bondAmount" placeholder="Amount (TZS)" min="0">
-                        </div>
-                        <div class="form-group mb-3">
-                            <input type="number" class="form-control" id="bondInterestRate" placeholder="Interest Rate (%)" min="0">
-                        </div>
-                        <div class="form-group mb-3">
-                            <input type="number" class="form-control" id="bondYears" placeholder="Duration (Years)" min="0">
-                        </div>
-                        <div class="form-group mb-3">
-                            <label for="bondFrequency">Interest Paid</label>
-                            <select class="form-control" id="bondFrequency">
-                                <option value="monthly">Monthly</option>
-                                <option value="quarterly">Quarterly</option>
-                                <option value="semi-annually">Semi-annually</option>
-                                <option value="yearly">Yearly</option>
-                            </select>
-                        </div>
-                    </div>
-
-                    <!-- Loan Calculator Fields -->
-                    <div id="loanCalculatorFields" style="display: none;">
-                        <h4>Loan Calculator</h4>
-                        <div class="form-group mb-3">
-                            <input type="number" class="form-control" id="loanAmount" placeholder="Amount (TZS)" min="0">
-                        </div>
-                        <div class="form-group mb-3">
-                            <input type="number" class="form-control" id="loanInterestRate" placeholder="Interest Rate (%)" min="0">
-                        </div>
-                        <div class="form-group mb-3">
-                            <input type="number" class="form-control" id="loanYears" placeholder="Duration (Years)" min="0">
-                        </div>
-                    </div>
-
-                    <!-- Buttons -->
-                    <div class="button-group mt-4">
-                        <button type="submit" class="btn btn-primary w-100">Calculate</button>
-                        <button type="button" class="btn btn-secondary w-100 mt-3" id="clearFormBtn">Clear</button>
-                    </div>
-                </form>
+    <div class="container mt-5">
+        <h2>Bond & Loan Calculator</h2>
+        <form id="calculatorForm">
+            <div class="mb-3">
+                <label for="calculatorType" class="form-label">Choose Calculation Type</label>
+                <select class="form-select" id="calculatorType">
+                    <option value="bond">Bond</option>
+                    <option value="loan">Loan</option>
+                </select>
             </div>
-        </div>
+
+            <div id="bondCalculatorFields">
+                <h3>Bond Calculator</h3>
+                <div class="mb-3">
+                    <label for="bondAmount" class="form-label">Bond Amount</label>
+                    <input type="text" class="form-control" id="bondAmount" placeholder="Enter bond amount">
+                </div>
+                <div class="mb-3">
+                    <label for="bondInterestRate" class="form-label">Interest Rate (%)</label>
+                    <input type="text" class="form-control" id="bondInterestRate" placeholder="Enter interest rate">
+                </div>
+                <div class="mb-3">
+                    <label for="bondYears" class="form-label">Years</label>
+                    <input type="text" class="form-control" id="bondYears" placeholder="Enter number of years">
+                </div>
+                <div class="mb-3">
+                    <label for="bondFrequency" class="form-label">Interest Frequency</label>
+                    <select class="form-select" id="bondFrequency">
+                        <option value="monthly">Monthly</option>
+                        <option value="quarterly">Quarterly</option>
+                        <option value="semi-annually">Semi-annually</option>
+                        <option value="yearly">Yearly</option>
+                    </select>
+                </div>
+            </div>
+
+            <div id="loanCalculatorFields" style="display: none;">
+                <h3>Loan Calculator</h3>
+                <div class="mb-3">
+                    <label for="loanAmount" class="form-label">Loan Amount</label>
+                    <input type="text" class="form-control" id="loanAmount" placeholder="Enter loan amount">
+                </div>
+                <div class="mb-3">
+                    <label for="loanInterestRate" class="form-label">Interest Rate (%)</label>
+                    <input type="text" class="form-control" id="loanInterestRate" placeholder="Enter interest rate">
+                </div>
+                <div class="mb-3">
+                    <label for="loanYears" class="form-label">Years</label>
+                    <input type="text" class="form-control" id="loanYears" placeholder="Enter number of years">
+                </div>
+            </div>
+
+            <div class="mt-3">
+                <button type="submit" class="btn btn-primary">Calculate</button>
+                <button type="button" class="btn btn-secondary" id="clearFormBtn">Clear</button>
+            </div>
+        </form>
     </div>
 
-    <!-- Footer with Dark/Light Mode Switch -->
-    <footer class="text-center py-3 bg-light border-top">
-        <button class="btn btn-dark" id="toggleThemeBtn">Toggle Dark Mode</button>
-        <p>Bond & Loan Calculator &copy; 2024 Safe Bank Plc. All rights reserved.</p>
-    </footer>
-
-    <!-- Modal for displaying results -->
     <div class="modal fade" id="resultModal" tabindex="-1" aria-labelledby="resultModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -106,9 +93,7 @@
         </div>
     </div>
 
-    <!-- Bootstrap 5 JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Custom JS -->
     <script src="assets/js/calculator.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
