--- a/bond.html
+++ b/bond.html
@@ -47,7 +47,6 @@
 
     <!-- Calculator Form -->
     <div class="container calculator-container mt-5 mb-5">
-        <!-- Form for selecting between calculators -->
         <form id="calculatorForm" class="calculator-form">
             <div class="form-group mb-4">
                 <label for="calculatorType">Select Calculator</label>
@@ -61,13 +60,13 @@
             <div id="bondCalculatorFields">
                 <h4 class="mt-4">Bond Calculator</h4>
                 <div class="form-group mb-3">
-                    <input type="text" class="form-control" id="bondAmount" placeholder="Amount (TZS)">
+                    <input type="tel" class="form-control" id="bondAmount" placeholder="Amount (TZS)">
                 </div>
                 <div class="form-group mb-3">
-                    <input type="text" class="form-control" id="bondInterestRate" placeholder=" Interest Rate">
+                    <input type="tel" class="form-control" id="bondInterestRate" placeholder="Interest Rate (%)">
                 </div>
                 <div class="form-group mb-3">
-                    <input type="text" class="form-control" id="bondYears" placeholder="Enter Duration">
+                    <input type="tel" class="form-control" id="bondYears" placeholder="Duration (Years)">
                 </div>
                 <div class="form-group mb-3">
                     <label for="bondFrequency">Interest Paid</label>
@@ -84,12 +83,15 @@
             <div id="loanCalculatorFields" style="display: none;">
                 <h4 class="mt-4">Loan Calculator</h4>
                 <div class="form-group mb-3">
-                    <input type="text" class="form-control" id="loanAmount" placeholder="Amount (TZS)">
+                    <label for="loanAmount">Amount (TZS)</label>
+                    <input type="text" class="form-control" id="loanAmount" placeholder="Enter Amount">
                 </div>
                 <div class="form-group mb-3">
-                    <input type="text" class="form-control" id="loanInterestRate" placeholder="Interest Rate (%)">
+                    <label for="loanInterestRate">Interest Rate (%)</label>
+                    <input type="text" class="form-control" id="loanInterestRate" placeholder="Enter Interest Rate">
                 </div>
                 <div class="form-group mb-3">
+                    <label for="loanYears">Years</label>
                     <input type="text" class="form-control" id="loanYears" placeholder="Enter Duration">
                 </div>
             </div>
@@ -127,6 +129,9 @@
 
     <!-- Bootstrap 5 JS and dependencies -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Bootstrap Icons CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.js"></script>
+
     <!-- Custom JS -->
     <script src="assets/js/bond.js"></script>
     <script src="assets/js/calculator.js"></script>
