--- a/bond.html
+++ b/bond.html
@@ -60,13 +60,16 @@
             <div id="bondCalculatorFields">
                 <h4 class="mt-4">Bond Calculator</h4>
                 <div class="form-group mb-3">
-                    <input type="tel" class="form-control" id="bondAmount" placeholder="Amount (TZS)">
+                    <input type="tel" class="form-control" id="bondAmount" placeholder="Amount (TZS)" oninput="formatNumber(this)">
+                    <span class="validation-icon" id="bondAmountIcon"></span>
                 </div>
                 <div class="form-group mb-3">
-                    <input type="tel" class="form-control" id="bondInterestRate" placeholder="Interest Rate (%)">
+                    <input type="tel" class="form-control" id="bondInterestRate" placeholder="Interest Rate (%)" oninput="formatNumber(this)">
+                    <span class="validation-icon" id="bondInterestRateIcon"></span>
                 </div>
                 <div class="form-group mb-3">
-                    <input type="tel" class="form-control" id="bondYears" placeholder="Duration (Years)">
+                    <input type="tel" class="form-control" id="bondYears" placeholder="Duration (Years)" oninput="formatNumber(this)">
+                    <span class="validation-icon" id="bondYearsIcon"></span>
                 </div>
                 <div class="form-group mb-3">
                     <label for="bondFrequency">Interest Paid</label>
@@ -84,15 +87,18 @@
                 <h4 class="mt-4">Loan Calculator</h4>
                 <div class="form-group mb-3">
                     <label for="loanAmount">Amount (TZS)</label>
-                    <input type="text" class="form-control" id="loanAmount" placeholder="Enter Amount">
+                    <input type="tel" class="form-control" id="loanAmount" placeholder="Enter Amount" oninput="formatNumber(this)">
+                    <span class="validation-icon" id="loanAmountIcon"></span>
                 </div>
                 <div class="form-group mb-3">
                     <label for="loanInterestRate">Interest Rate (%)</label>
-                    <input type="text" class="form-control" id="loanInterestRate" placeholder="Enter Interest Rate">
+                    <input type="tel" class="form-control" id="loanInterestRate" placeholder="Enter Interest Rate" oninput="formatNumber(this)">
+                    <span class="validation-icon" id="loanInterestRateIcon"></span>
                 </div>
                 <div class="form-group mb-3">
                     <label for="loanYears">Years</label>
-                    <input type="text" class="form-control" id="loanYears" placeholder="Enter Duration">
+                    <input type="tel" class="form-control" id="loanYears" placeholder="Enter Duration" oninput="formatNumber(this)">
+                    <span class="validation-icon" id="loanYearsIcon"></span>
                 </div>
             </div>
 
@@ -129,7 +135,12 @@
 
     <!-- Bootstrap 5 JS and dependencies -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Bootstrap Icons CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.js"></script>
+
     <!-- Custom JS -->
     <script src="assets/js/bond.js"></script>
+    <script src="assets/js/calculator.js"></script>
+
 </body>
 </html>
