--- a/bond.html
+++ b/bond.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bond and Loan Calculator</title>
+    <title>Bond Calculator</title>
     
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -50,7 +50,7 @@
         <form id="calculatorForm" class="calculator-form">
             <div class="form-group mb-4">
                 <label for="calculatorType">Select Calculator</label>
-                <select class="form-control" id="calculatorType">
+                <select class="form-control custom-select" id="calculatorType">
                     <option value="bond">Bond</option>
                     <option value="loan">Loan</option>
                 </select>
@@ -60,20 +60,17 @@
             <div id="bondCalculatorFields">
                 <h4 class="mt-4">Bond Calculator</h4>
                 <div class="form-group mb-3">
-                    <input type="tel" class="form-control" id="bondAmount" placeholder="Amount (TZS)" oninput="formatNumber(this)">
-                    <span class="validation-icon" id="bondAmountIcon"></span>
+                    <input type="tel" class="form-control" id="bondAmount" placeholder="Amount (TZS)">
                 </div>
                 <div class="form-group mb-3">
-                    <input type="tel" class="form-control" id="bondInterestRate" placeholder="Interest Rate (%)" oninput="formatNumber(this)">
-                    <span class="validation-icon" id="bondInterestRateIcon"></span>
+                    <input type="tel" class="form-control" id="bondInterestRate" placeholder="Interest Rate (%)">
                 </div>
                 <div class="form-group mb-3">
-                    <input type="tel" class="form-control" id="bondYears" placeholder="Duration (Years)" oninput="formatNumber(this)">
-                    <span class="validation-icon" id="bondYearsIcon"></span>
+                    <input type="tel" class="form-control" id="bondYears" placeholder="Duration (Years)">
                 </div>
                 <div class="form-group mb-3">
                     <label for="bondFrequency">Interest Paid</label>
-                    <select class="form-control" id="bondFrequency">
+                    <select class="form-control custom-select" id="bondFrequency">
                         <option value="monthly">Monthly</option>
                         <option value="quarterly">Quarterly</option>
                         <option value="semi-annually">Semi-annually</option>
@@ -87,18 +84,15 @@
                 <h4 class="mt-4">Loan Calculator</h4>
                 <div class="form-group mb-3">
                     <label for="loanAmount">Amount (TZS)</label>
-                    <input type="tel" class="form-control" id="loanAmount" placeholder="Enter Amount" oninput="formatNumber(this)">
-                    <span class="validation-icon" id="loanAmountIcon"></span>
+                    <input type="text" class="form-control" id="loanAmount" placeholder="Enter Amount">
                 </div>
                 <div class="form-group mb-3">
                     <label for="loanInterestRate">Interest Rate (%)</label>
-                    <input type="tel" class="form-control" id="loanInterestRate" placeholder="Enter Interest Rate" oninput="formatNumber(this)">
-                    <span class="validation-icon" id="loanInterestRateIcon"></span>
+                    <input type="text" class="form-control" id="loanInterestRate" placeholder="Enter Interest Rate">
                 </div>
                 <div class="form-group mb-3">
                     <label for="loanYears">Years</label>
-                    <input type="tel" class="form-control" id="loanYears" placeholder="Enter Duration" oninput="formatNumber(this)">
-                    <span class="validation-icon" id="loanYearsIcon"></span>
+                    <input type="text" class="form-control" id="loanYears" placeholder="Enter Duration">
                 </div>
             </div>
 
@@ -135,11 +129,7 @@
 
     <!-- Bootstrap 5 JS and dependencies -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Bootstrap Icons CDN -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.js"></script>
-
     <!-- Custom JS -->
-    <script src="assets/js/bond.js"></script>
     <script src="assets/js/calculator.js"></script>
 
 </body>
