--- a/bond.html
+++ b/bond.html
@@ -130,7 +130,7 @@
     <!-- Bootstrap 5 JS and dependencies -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Custom JS -->
-    <script src="assets/js/calculator.js"></script>
+    <script src="assets/js/bond.js"></script>
 
 </body>
 </html>
