--- a/bond.html
+++ b/bond.html
@@ -106,7 +106,7 @@
 
     <!-- Footer -->
     <footer class="text-center mt-5">
-        <p>Bond Calculator &copy; 2024 Safe Bank Plc. All rights reserved.</p>
+        <p>Bond Calculator &copy; 2024 Safe Bank Plc.</p>
     </footer>
 
     <!-- Modal for displaying results -->
