--- a/g.html
+++ b/g.html
@@ -3,24 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bond and Loan Calculator</title>
+    <title>Bond Calculator</title>
     
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="assets/css/bond.css">
-    <link rel="stylesheet" href="assets/css/calculator.css">
 </head>
 <body>
 
     <!-- Top Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light border-bottom">
-        <div class="container-fluid d-flex justify-content-between align-items-center">
-            <a class="navbar-brand" href="#">
-                <img src="img/logo.png" alt="Logo">
+    <nav class="navbar navbar-expand-lg navbar-light sticky-top border-bottom">
+        <div class="container-fluid d-flex align-items-center">
+            <a class="navbar-brand me-auto" href="#">
+                <img src="img/logo.png" alt="Logo"> <!-- Add your logo URL -->
             </a>
             <h1 class="mx-auto">Safe Bank Plc</h1>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span></span>
                 <span></span>
                 <span></span>
@@ -47,89 +46,91 @@
     </nav>
 
     <!-- Calculator Form -->
-    <div class="container mt-5">
-        <div class="calculator-container">
-            <h2>Choose Calculator</h2>
-            <select id="calculatorType" class="form-select mb-4" aria-label="Calculator Type">
-                <option value="bond">Bond Calculator</option>
-                <option value="loan">Loan Calculator</option>
-            </select>
-
-            <!-- Bond Calculator Form -->
-            <form id="bondCalculator" class="calculator-form">
-                <div class="mb-3">
-                    <label for="bondAmount" class="form-label">Bond Amount</label>
-                    <input type="text" id="bondAmount" class="form-control amount-input" required>
+    <div class="container calculator-container mt-5 mb-5">
+        <form id="calculatorForm" class="calculator-form">
+            <div class="form-group mb-4">
+                <label for="calculatorType">Select Calculator</label>
+                <select class="form-control custom-select" id="calculatorType">
+                    <option value="bond">Bond</option>
+                    <option value="loan">Loan</option>
+                </select>
+            </div>
+            
+            <!-- Bond Calculator Fields -->
+            <div id="bondCalculatorFields">
+                <h4 class="mt-4">Bond Calculator</h4>
+                <div class="form-group mb-3">
+                    <input type="tel" class="form-control" id="bondAmount" placeholder="Amount (TZS)">
                 </div>
-                <div class="mb-3">
-                    <label for="interestRate" class="form-label">Interest Rate (%)</label>
-                    <input type="number" id="interestRate" step="0.01" class="form-control" required>
+                <div class="form-group mb-3">
+                    <input type="tel" class="form-control" id="bondInterestRate" placeholder="Interest Rate (%)">
                 </div>
-                <div class="mb-3">
-                    <label for="years" class="form-label">Years</label>
-                    <input type="number" id="years" class="form-control" required>
+                <div class="form-group mb-3">
+                    <input type="tel" class="form-control" id="bondYears" placeholder="Duration (Years)">
                 </div>
-                <div class="mb-3">
-                    <label for="interestFrequency" class="form-label">Interest Payment Frequency</label>
-                    <select id="interestFrequency" class="form-select" required>
+                <div class="form-group mb-3">
+                    <label for="bondFrequency">Interest Paid</label>
+                    <select class="form-control custom-select" id="bondFrequency">
                         <option value="monthly">Monthly</option>
                         <option value="quarterly">Quarterly</option>
-                        <option value="semi-annually">Semi-Annually</option>
+                        <option value="semi-annually">Semi-annually</option>
                         <option value="yearly">Yearly</option>
                     </select>
                 </div>
-                <button type="submit" class="btn btn-dark w-100">Calculate Bond</button>
-            </form>
+            </div>
 
-            <!-- Loan Calculator Form (Initially hidden) -->
-            <form id="loanCalculator" class="calculator-form d-none">
-                <div class="mb-3">
-                    <label for="loanAmount" class="form-label">Loan Amount</label>
-                    <input type="text" id="loanAmount" class="form-control amount-input" required>
+            <!-- Loan Calculator Fields (hidden by default) -->
+            <div id="loanCalculatorFields" style="display: none;">
+                <h4 class="mt-4">Loan Calculator</h4>
+                <div class="form-group mb-3">
+                    <label for="loanAmount">Amount (TZS)</label>
+                    <input type="text" class="form-control" id="loanAmount" placeholder="Enter Amount">
                 </div>
-                <div class="mb-3">
-                    <label for="loanInterestRate" class="form-label">Interest Rate (%)</label>
-                    <input type="number" id="loanInterestRate" step="0.01" class="form-control" required>
+                <div class="form-group mb-3">
+                    <label for="loanInterestRate">Interest Rate (%)</label>
+                    <input type="text" class="form-control" id="loanInterestRate" placeholder="Enter Interest Rate">
                 </div>
-                <div class="mb-3">
-                    <label for="loanYears" class="form-label">Loan Term (Years)</label>
-                    <input type="number" id="loanYears" class="form-control" required>
+                <div class="form-group mb-3">
+                    <label for="loanYears">Years</label>
+                    <input type="text" class="form-control" id="loanYears" placeholder="Enter Duration">
                 </div>
-                <button type="submit" class="btn btn-dark w-100">Calculate Loan</button>
-            </form>
-        </div>
-    </div>
+            </div>
 
-    <!-- Modal for Result Display -->
-    <div class="modal fade" id="resultModal" tabindex="-1" aria-labelledby="resultModalLabel" aria-hidden="true">
-      <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="resultModalLabel">Calculation Result</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
-          <div class="modal-body" id="modalResult">
-            <!-- Results will be displayed here -->
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          </div>
-        </div>
-      </div>
+            <!-- Buttons -->
+            <div class="button-group mt-4">
+                <button type="submit" class="btn btn-dark w-100">Calculate</button>
+                <button type="button" class="btn btn-light w-100 mt-3" id="clearFormBtn">Clear</button>
+            </div>
+        </form>
     </div>
 
     <!-- Footer -->
-    <footer>
-        <div class="container text-center">
-            <p class="mb-0 small">Bond Calculator &copy; 2024 Safe Bank Plc. All rights reserved.</p>
-        </div>
+    <footer class="text-center mt-5">
+        <p>Bond Calculator &copy; 2024 Safe Bank Plc.</p>
     </footer>
+
+    <!-- Modal for displaying results -->
+    <div class="modal fade" id="resultModal" tabindex="-1" aria-labelledby="resultModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="resultModalLabel">Calculation Result</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body" id="modalResult">
+                    <!-- Calculation results will be displayed here -->
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Bootstrap 5 JS and dependencies -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Custom JS -->
     <script src="assets/js/bond.js"></script>
-    <script src="assets/js/calculator.js"></script>
 
 </body>
 </html>
